Adaptation to telegrambots 7.0.0